[workspace]
resolver = "3"

members = [
    "engine",
    "gateway",
    "storage",
]

[workspace.dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
config = { version = "0.15.9", default-features = false, features = ["yaml"] }
env_logger = "0.11.6"
futures = "0.3.31"
lapin = "2.5.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.134"
thiserror = "2.0.11"
tokio = { version = "1.42.0" }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
