[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.86"  # Unique to gateway
config = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
