[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "storage"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "macros", "runtime-tokio"] }  # Unique to storage
serde_json = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
